# Tech-Support

./: .gitignore  CLAUDE.md  IDENTITY.md  README.md  TechSupport.sln  bridge.bat  bridge.ps1  cli.ps1  find.ps1  refresh-brain.bat  refresh-brain.ps1  start-theo.bat  start-theo.ps1
python/: README.md  pyproject.toml
python/agent/: __init__.py  agent.py  briefing.py  cli.py  drift.py  embeddings.py  identity_growth.py  introspection.py  reasoning.py  server.py  soul_backup.py  state.py  tool_selector.py  transcript_logger.py  voice.py  voice_cli.py  voice_pipecat.py
python/agent/additives/: __init__.py  hot_memory.py
python/agent/bridges/: firebase_bridge.py
python/agent/finetune/: __init__.py  dataset.py  inspect.py  preflight.py  train.py
python/agent/llm/: __init__.py  base.py  claude_client.py  ollama_client.py
python/agent/tools/: __init__.py  _all.py  ascii_art.py  base.py  browser.py  chess.py  code_tools.py  croc_tool.py  d2.py  finance.py  identity_growth_tool.py  identity_tools.py  image_gen.py  introspection.py  memory.py  osint.py  proteus_congress.py  proteus_crypto.py  proteus_robinhood.py  qr.py  rclone_tool.py  register_check.py  safety.py  security_tools.py  server_metrics.py  skills.py  soul_backup_tool.py  system.py  theo_predict.py  trading.py  typed_memory.py  vision.py  (+1 more)
python/agent_env/: __init__.py  client.py  env.py  reward.py
python/ml/: __init__.py  features.py  predict.py  theo_net.py  train.py
python/scripts/: backtest.py  chat_lora.py  compare.py  dump_brain.py  generate_synthetic.py  paper_runner.py  paper_shadow.py  random_baseline.py  scripted_baseline.py  train.py  train_basket.py  train_lora.py  walkforward.py  walkforward_overlay.py  where.py
python/trading/: __init__.py  labels.py  universes.py
(+213 files in other folders)
