[project]
name = "techsupport-agent-env"
version = "0.1.0"
description = "Gymnasium environment wrapping the TechSupport agent for GUI RL."
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.24",
  "requests>=2.31",
  "Pillow>=10.0",
]

[project.optional-dependencies]
train = [
  "stable-baselines3>=2.3",
  "torch>=2.2",
  "tensorboard>=2.16",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
