[project]
name = "techsupport-agent-env"
version = "0.1.0"
description = "Gymnasium environment wrapping the TechSupport agent for GUI RL."
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.24",
  "requests>=2.31",
  "Pillow>=10.0",
]

[project.optional-dependencies]
train = [
  "stable-baselines3>=2.3",
  "torch>=2.2",
  "tensorboard>=2.16",
]
agent = [
  "fastembed>=0.4",
  "numpy>=1.24",
  "duckduckgo-search>=6.3",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "lancedb>=0.13",
  "pyarrow>=14.0",
  "qrcode[pil]>=7.4",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
]
firebase = [
  "google-cloud-firestore>=2.18",
]
trading = [
  "pandas>=2.0",
  "pyarrow>=14.0",
  "alpaca-py>=0.30",
  "xgboost>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "rich>=13.0",
]
voice = [
  "sounddevice>=0.4",
  "soundfile>=0.12",
  "faster-whisper>=1.0",
  "pyttsx3>=2.90",
]
ml = [
  "torch>=2.2",
  "yfinance>=0.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent_env*", "trading*", "scripts*", "agent*", "ml*"]
exclude = ["tests*"]
